Fix z-index menu

--- a/src/app/layout/styles/_sidebar.scss
+++ b/src/app/layout/styles/_sidebar.scss
@@ -3,7 +3,7 @@
     z-index: 10;
     .layout-root & {
         position: relative;
-        z-index: 3;
+        z-index: 30;
 
         float: left;
 
